tests/compile-fail/serde_core_without_marker.stderr
error[E0277]: the trait bound `Fixed<[u8; 32]>: serde::Serialize` is not satisfied
 --> tests/compile-fail/serde_core_without_marker.rs:9:35
  |
9 |     let _ = serde_json::to_string(&fixed);
  |             --------------------- ^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `Fixed<[u8; 32]>`
  |             |
  |             required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Fixed<[u8; 32]>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::ser::Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-$VERSION/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `Dynamic<_>: serde::Serialize` is not satisfied
  --> tests/compile-fail/serde_core_without_marker.rs:12:35
   |
12 |     let _ = serde_json::to_string(&dyn_str);
   |             --------------------- ^^^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `Dynamic<_>`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Dynamic<_>` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
